docs/en/5.0.30/api/audiocapture.md
#AudioCapture
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;10</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mgetDefaultSTATIC" data-target="cMethodgetDefault" class="autouncollapse">getDefault</a></li><li><a href="#msetDefaultSTATIC" data-target="cMethodsetDefault" class="autouncollapse">setDefault</a></li></li><li class="divider"></li><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Instance</i></b></a><li><a href="#mcancel" data-target="cMethodcancel" class="autouncollapse">cancel</a></li><li><a href="#mgetAllProperties" data-target="cMethodgetAllProperties" class="autouncollapse">getAllProperties</a></li><li><a href="#mgetProperties" data-target="cMethodgetProperties" class="autouncollapse">getProperties</a></li><li><a href="#mgetProperty" data-target="cMethodgetProperty" class="autouncollapse">getProperty</a></li><li><a href="#msetProperties" data-target="cMethodsetProperties" class="autouncollapse">setProperties</a></li><li><a href="#msetProperty" data-target="cMethodsetProperty" class="autouncollapse">setProperty</a></li><li><a href="#mstart" data-target="cMethodstart" class="autouncollapse">start</a></li><li><a href="#mstop" data-target="cMethodstop" class="autouncollapse">stop</a></li></li></ul></div><div class="btn-group"><a href="#Properties" class="btn"><i class="icon-list"></i> Properties<sup>&nbsp;3</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Instance Properties</i></b></a><li><a href="#pencoder" data-target="cPropertyencoder" class="autouncollapse">encoder</a></li><li><a href="#pfileName" data-target="cPropertyfileName" class="autouncollapse">fileName</a></li><li><a href="#pmaxDuration" data-target="cPropertymaxDuration" class="autouncollapse">maxDuration</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;2</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Starting, Stopping And Cancelling Audio Capture</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Setting And Getting File Name</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;8</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">File Name</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Audio Capture</a></li><li><a href="#r2" data-target="rRemark2" class="autouncollapse">Restarting of Audio Capture</a></li><li><a href="#r3" data-target="rRemark3" class="autouncollapse">Page Refresh</a></li><li><a href="#r4" data-target="rRemark4" class="autouncollapse">Page Navigation</a></li><li><a href="#r5" data-target="rRemark5" class="autouncollapse">Duration And File Name Settings</a></li><li><a href="#r6" data-target="rRemark6" class="autouncollapse">Get Property Or Get Properties</a></li><li><a href="#r7" data-target="rRemark7" class="autouncollapse">General</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">JavaScript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>Audio capture API allows you to capture audio from the device&rsquo;s built in microphone or input source.</p>
<pre><code>            ## Enabling the API In order to use this API you must include the following extension in your `build.yml` :::ruby extensions: ["audiocapture"] ## JavaScript Usage Be sure to review the [JavaScript API Usage](/guide/api_js) guide for important information about using this API in JavaScript. ## Ruby Usage Be sure to review the [Ruby API Usage](/guide/api_ruby) guide for important information about using this API in Ruby.
</code></pre>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mcancel'/><div class=' method  js ruby android ios' id='mcancel'><h3><strong  >cancel</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mcancel1" data-toggle="tab">Description</a></li><li ><a href="#mcancel4" data-toggle="tab">Return</a></li><li ><a href="#mcancel6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-cancel'><div class="tab-pane fade active in" id="mcancel1"><p>Cancel audio recording. During recording if &lsquo;cancel&rsquo; method is called, the status of recording will be &lsquo;cancel&rsquo; in the callback returning parameter of &lsquo;start&rsquo; method. No file is saved. In android, it will delete the file if it exists.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mcancel2"></div><div class="tab-pane fade" id="mcancel3"></div><div class="tab-pane fade" id="mcancel4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mcancel6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.cancel()</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.cancel()</code> </li><li>Ruby: <code>Rho::AudioCapture.cancel()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetAllProperties'/><div class=' method  js ruby android ios' id='mgetAllProperties'><h3><strong  >getAllProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetAllProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetAllProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetAllProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetAllProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetAllProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getAllProperties'><div class="tab-pane fade active in" id="mgetAllProperties1"><p>This method will return all of object/value pairs for the propertyNames of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetAllProperties2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetAllProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of all available properties</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::AudioCapture.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDefaultSTATIC'/><div class=' method  js ruby android ios' id='mgetDefaultSTATIC'><h3><strong  >getDefault</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mgetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mgetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getDefaultSTATIC'><div class="tab-pane fade active in" id="mgetDefaultSTATIC1"><p>This method will return an object that represents the default instance of the API Class. For example Camera.getDefault will return a Camera object that represents the default camera.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetDefaultSTATIC2"></div><div class="tab-pane fade" id="mgetDefaultSTATIC3"></div><div class="tab-pane fade" id="mgetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>SELF_INSTANCE : <p>Default object of Module.</p>
</li></ul></div></div><div class="tab-pane fade" id="mgetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.AudioCapture.getDefault()</code> </li><li>Ruby: <code>Rho::AudioCapture.getDefault()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperties'/><div class=' method  js ruby android ios' id='mgetProperties'><h3><strong  >getProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperties1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperties3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperties4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperties'><div class="tab-pane fade active in" id="mgetProperties1"><p>This method will return a set of object/value pairs for the list of the propertyName that is passed in. The propertyNames must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperties2"><div><p><strong>Parameters</strong></p><ul><li>arrayofNames : <span class='text-info'>ARRAY</span><p><p>List of properties I want to know about</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of properties I want to know about</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::AudioCapture.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperty'/><div class=' method  js ruby android ios' id='mgetProperty'><h3><strong  >getProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mgetProperty1" data-toggle="tab">Description</a></li><li ><a href="#mgetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#mgetProperty3" data-toggle="tab">Callback</a></li><li ><a href="#mgetProperty4" data-toggle="tab">Return</a></li><li ><a href="#mgetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-getProperty'><div class="tab-pane fade active in" id="mgetProperty1"><p>This method will return the value of the propertyName that is passed in. The propertyName must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The property to return info about.</p>
 </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperty3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>STRING</span></strong></p><ul></ul></div></div><div class="tab-pane fade" id="mgetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : <p>The property to return info about.</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mgetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::AudioCapture.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetDefaultSTATIC'/><div class=' method  js ruby android ios' id='msetDefaultSTATIC'><h3><strong  >setDefault</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">SELF_INSTANCE: Rho::AudioCapture</span> defaultInstance)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetDefaultSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#msetDefaultSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#msetDefaultSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#msetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setDefaultSTATIC'><div class="tab-pane fade active in" id="msetDefaultSTATIC1"><p>This method allows you to set the attributes of the default object instance by passing in an object of the same class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetDefaultSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>defaultInstance : <span class='text-info'>SELF_INSTANCE: Rho::AudioCapture</span><p><p>An instance object that is of the same class.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC3"></div><div class="tab-pane fade" id="msetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.AudioCapture.setDefault(<span class="text-info">SELF_INSTANCE: Rho::AudioCapture</span> defaultInstance)</code> </li><li>Ruby: <code>Rho::AudioCapture.setDefault(<span class="text-info">SELF_INSTANCE: Rho::AudioCapture</span> defaultInstance)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperties'/><div class=' method  js ruby android ios' id='msetProperties'><h3><strong  >setProperties</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperties1" data-toggle="tab">Description</a></li><li ><a href="#msetProperties2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperties4" data-toggle="tab">Return</a></li><li ><a href="#msetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperties'><div class="tab-pane fade active in" id="msetProperties1"><p>This method will set the values of a list of properties for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperties2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Map of properties I want to set</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetProperties3"></div><div class="tab-pane fade" id="msetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.setProperties(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::AudioCapture.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperty'/><div class=' method  js ruby android ios' id='msetProperty'><h3><strong  >setProperty</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#msetProperty1" data-toggle="tab">Description</a></li><li ><a href="#msetProperty2" data-toggle="tab">Parameters</a></li><li ><a href="#msetProperty4" data-toggle="tab">Return</a></li><li ><a href="#msetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-setProperty'><div class="tab-pane fade active in" id="msetProperty1"><p>This method will set the value of a property for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The one property name that I want to set</p>
 </p></li><li>propertyValue : <span class='text-info'>STRING</span><p><p>The one property value that I want to set</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetProperty3"></div><div class="tab-pane fade" id="msetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code> </li><li>Ruby: <code>Rho::AudioCapture.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstart'/><div class=' method  js ruby android ios' id='mstart'><h3><strong  >start</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> props, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstart1" data-toggle="tab">Description</a></li><li ><a href="#mstart2" data-toggle="tab">Parameters</a></li><li ><a href="#mstart3" data-toggle="tab">Callback</a></li><li ><a href="#mstart4" data-toggle="tab">Return</a></li><li ><a href="#mstart6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-start'><div class="tab-pane fade active in" id="mstart1"><p>Starts capturing audio until either &lsquo;stop&rsquo; is received, or &lsquo;maxDuration&rsquo; is reached. The successful recording will set &lsquo;ok&rsquo; as the status. An unsuccessful recording will set &lsquo;cancel&rsquo; or &lsquo;error&rsquo; as the status in the callback returning parameters. If &lsquo;cancel&rsquo; method is called during recording, &lsquo;cancel&rsquo; status will be set in the callback returning parameters. In order to restart the audio capture, if the audio capturing is already in process, it is mandatory to call &lsquo;stop&rsquo; or &lsquo;cancel&rsquo; method before calling &lsquo;start&rsquo; method again.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstart2"><div><p><strong>Parameters</strong></p><ul><li>props : <span class='text-info'>HASH</span><p><p>Map of Audio Capture properties to be set. For iOS 22kHz 16bit Mono WAV file will be created.In Android, ruby callbacks are taking 20secs to fire.</p>
 Valid `properties` for this parameter are the properties avaliable to this API module. <a href='#Properties'>Check the property section</a> </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mstart3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>status : <span class='text-info'>STRING</span><p><p>Whether or not the audio recording was successfully captured, status will be &lsquo;ok&rsquo; or &lsquo;cancel&rsquo; or &lsquo;error&rsquo;.</p>
 </p></li><li>message : <span class='text-info'>STRING</span><p><p>If &lsquo;status&rsquo; == &lsquo;error&rsquo;, then message contains error message. In all other cases, it will remain empty.</p>
 </p></li><li>fileName : <span class='text-info'>STRING</span><p><p>If &lsquo;status&rsquo; == &lsquo;ok&rsquo;, then contain full file path with the file name of recorded audiofile. In all other cases, it will remain empty.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mstart4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mstart6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.start(<span class="text-info">HASH</span> props, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.start(<span class="text-info">HASH</span> props, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::AudioCapture.start(<span class="text-info">HASH</span> props, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstop'/><div class=' method  js ruby android ios' id='mstop'><h3><strong  >stop</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mstop1" data-toggle="tab">Description</a></li><li ><a href="#mstop4" data-toggle="tab">Return</a></li><li ><a href="#mstop6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-stop'><div class="tab-pane fade active in" id="mstop1"><p>Stop audio recording. During recording if &lsquo;stop&rsquo; method is called, the status of recording will be &lsquo;ok&rsquo; in the callback returning parameter of &lsquo;start&rsquo; method. The file is saved in user provided location.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstop2"></div><div class="tab-pane fade" id="mstop3"></div><div class="tab-pane fade" id="mstop4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mstop6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.stop()</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.stop()</code> </li><li>Ruby: <code>Rho::AudioCapture.stop()</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2><i class='icon-list'></i>Properties</h2>

<a name='pencoder'></a><div class=' method  js ruby android' id='pencoder'><h3><strong  >encoder</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pencoder1" data-toggle="tab">Description</a></li><li ><a href="#pencoder5" data-toggle="tab">Values</a></li><li ><a href="#pencoder6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-encoder'><div class="tab-pane fade active in" id="pencoder1"><p>Encoder to compress recorded audio. In Android devices, the supported encoder type is dependent upon device hardware and vendor.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="pencoder2"></div><div class="tab-pane fade" id="pencoder5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.AudioCapture.ENCODER_AAC (For Ruby use "::" instead of ".")<br/> String: AAC </dt><dd><p>AAC low complexity. This is the default value. If wrong or no value is specified this value will be accounted.</p>
</dt><dt>Constant: Rho.AudioCapture.ENCODER_AMR_NB (For Ruby use "::" instead of ".")<br/> String: AMR_NB </dt><dd><p>AMR narrow-band.</p>
</dt><dt>Constant: Rho.AudioCapture.ENCODER_AMR_WB (For Ruby use "::" instead of ".")<br/> String: AMR_WB </dt><dd><p>AMR wide-band.</p>
</dt></dl></div><div class="tab-pane fade" id="pencoder6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.encoder</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.encoder</code> </li><li>Ruby: <code>Rho::AudioCapture.encoder</code></li></ul></li></ul></div></div></div>  </div><a name='pfileName'></a><div class=' method  js ruby android ios' id='pfileName'><h3><strong  >fileName</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>STRING</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pfileName1" data-toggle="tab">Description</a></li><li ><a href="#pfileName6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-fileName'><div class="tab-pane fade active in" id="pfileName1"><p>(Required) This parameter is used to specify the file name. The file name should be set at least once before calling &lsquo;start&rsquo; method, otherwise the &lsquo;start&rsquo; method will update the callback &lsquo;status&rsquo; as &lsquo;error&rsquo;.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pfileName2"></div><div class="tab-pane fade" id="pfileName5"></div><div class="tab-pane fade" id="pfileName6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.fileName</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.fileName</code> </li><li>Ruby: <code>Rho::AudioCapture.fileName</code></li></ul></li></ul></div></div></div>  </div><a name='pmaxDuration'></a><div class=' method  js ruby android ios' id='pmaxDuration'><h3><strong  >maxDuration</strong><span style='font-size:.7em;font-weight:normal;'> : <span class='text-info'>INTEGER</span>  </span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#pmaxDuration1" data-toggle="tab">Description</a></li><li ><a href="#pmaxDuration2" data-toggle="tab">Params</a></li><li ><a href="#pmaxDuration6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-maxDuration'><div class="tab-pane fade active in" id="pmaxDuration1"><p>Specifies the number of milliseconds of audio to capture, defining the size of the capture buffer. This is also the maximum number of milliseconds of audio to capture when the &lsquo;start&rsquo; method is called if not interrupted with the &lsquo;stop&rsquo; method. The duration cannot be set to less than 1000 milliseconds, if a value of less than 1000 milliseconds is specified, the interval will be defaulted to 20000 milliseconds. The default value is 20,000 milliseconds.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="pmaxDuration2"><p><strong>Default:</strong> 20000</p></div><div class="tab-pane fade" id="pmaxDuration5"></div><div class="tab-pane fade" id="pmaxDuration6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.maxDuration</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.AudioCapture.maxDuration</code> </li><li>Ruby: <code>Rho::AudioCapture.maxDuration</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Starting, Stopping And Cancelling Audio Capture</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Starting, Stopping and Canceling audio capture is same across all platforms.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

// Starting Audio Capture without settings. Callback is mandatory. Setting the file name at least once is also mandatory before invoking 'start' method.
Rho.AudioCapture.start({},mycallback);

// Starting Audio Capture with settings. Callback is mandatory.
// On successful recording the hash property  for fileName' in callback will return the complete file path with the filename.
// In Windows, for the below settings, it will return "file://\AudioCapture.wav".
Rho.AudioCapture.start({'fileName':"AudioCapture",'maxDuration':'15000'},mycallback);

// Stopping Audio Capture
Rho.AudioCapture.stop();

// Cancelling Audio Capture
Rho.AudioCapture.cancel();

								</code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Starting Audio Capture without settings. Callback is mandatory. Setting the file name at least once is also mandatory before invoking 'start' method.
Rho::AudioCapture.start({},mycallback);

#Starting Audio Capture with settings. Callback is mandatory.
#On successful recording the hash property  for fileName' in callback will return the complete file path with the filename.
#In Windows, for the below settings, it will return "file://\AudioCapture.wav".
Rho::AudioCapture.start({'fileName':"AudioCapture",'maxDuration':'15000'},mycallback);

#Stopping Audio Capture
Rho::AudioCapture.stop();

#Cancelling Audio Capture
Rho::AudioCapture.cancel();

								</code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Setting And Getting File Name</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>In WM/WinCE, one can set the fileName with or without extensions. On retrieving, the fileName property will return the complete path with the extension name.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

// Setting fileName without extension
Rho.AudioCapture.fileName = "\\Application\\Audio1";

// The returned value is "\Application\Audio1.wav"
alert(Rho.AudioCapture.fileName);

// Setting fileName with extension
Rho.AudioCapture.fileName = "Audio2.wav";

// The returned value is "\Audio2.wav"
alert(Rho.AudioCapture.fileName);

								</code></pre></div><div class='tab-pane' id='exI1-S0RUBY'><pre class='CodeRay'><code>:::ruby

#Setting fileName without extension
Rho::AudioCapture.fileName = "\\Application\\Audio1";

#The returned value is "\Application\Audio1.wav"
Alert.show_popup(Rho::AudioCapture.fileName);

#Setting fileName with extension
Rho::AudioCapture.fileName = "Audio2.wav";

#The returned value is "\Audio2.wav"
Alert.show_popup(Rho::AudioCapture.fileName);

								</code></pre></div></div>
<p>In Android, one can set the fileName with or without extensions. The extension depends on encoder. The directory should be present.</p>
<ul class='nav nav-tabs' id='exI1-S1Tab'><li class='active'><a href='#exI1-S1JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S1RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S1JS'><pre class='CodeRay'><code>:::javascript

// Setting fileName without extension
Rho.AudioCapture.fileName = "/sdcard/Audio/sample";

// The returned value is "/sdcard/Audio/sample";
alert(Rho.AudioCapture.fileName);

// Setting fileName with extension
Rho.AudioCapture.fileName = "/sdcard/Audio/sample.mp4";

// The returned value is "/sdcard/Audio/sample.mp4";
alert(Rho.AudioCapture.fileName);

								</code></pre></div><div class='tab-pane' id='exI1-S1RUBY'><pre class='CodeRay'><code>:::ruby

#Setting fileName without extension
Rho::AudioCapture.fileName = "/sdcard/Audio/sample";

#The returned value is "/sdcard/Audio/sample"
Alert.show_popup(Rho::AudioCapture.fileName);

#Setting fileName with extension
Rho::AudioCapture.fileName = "/sdcard/Audio/sample.mp4";

#The returned value is "/sdcard/Audio/sample.mp4"
Alert.show_popup(Rho::AudioCapture.fileName);

								</code></pre></div></div>
<p>In iOS, one can set the fileName without extensions. The extension depends on encoder and will be automatically added. Currently supported WAV (16kHz, 16 bit, mono) IF you do not specify fullpath filename, then file will be placed to default folder. You can receive result fullpath filename in callback.</p>
<ul class='nav nav-tabs' id='exI1-S2Tab'><li class='active'><a href='#exI1-S2JS' data-toggle='tab'>JavaScript</a></li><li ><a href='#exI1-S2RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S2JS'><pre class='CodeRay'><code>:::javascript

#Setting fileName without extension
Rho.AudioCapture.fileName = "sample";

// The returned value is "sample";
alert(Rho.AudioCapture.fileName);

#Setting fileName with fullpath
Rho.AudioCapture.fileName = Rho.Application.userFolder + 'mysound';

// The returned value is (this is example for simulator) "/Users/MOHUS/Library/Application Support/iPhone Simulator/7.1/Applications/376D660D-B6C7-4E6E-8B69-38E7C681DAC5/Documents/apps/mysound";
alert(Rho.AudioCapture.fileName);


								</code></pre></div><div class='tab-pane' id='exI1-S2RUBY'><pre class='CodeRay'><code>:::ruby

#Setting fileName without extension
Rho::AudioCapture.fileName = 'sample'

// The returned value is "sample"
Alert.show_popup(Rho.AudioCapture.fileName)

#Setting fileName with fullpath
Rho::AudioCapture.fileName = File.join(Rho::Application.userFolder,'mysound')

// The returned value is (this is example for simulator) "/Users/MOHUS/Library/Application Support/iPhone Simulator/7.1/Applications/376D660D-B6C7-4E6E-8B69-38E7C681DAC5/Documents/apps/mysound";
Alert.show_popup(Rho.AudioCapture.fileName)


								</code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>File Name</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>In Windows, to store the file in a particular location, specify the path with the file name. Mentioning the extension name with the file name is optional. Only *.wav files are supported. If the path is not specified with the file name, the captured file is stored in the root directory of the device. In Windows and Android, if the folder is not present, it should be created manually for storing the file in that location. In Android, the file extension depends on encoder value. If it is AAC, the extension should be &lsquo;.mp4&rsquo;. In all other cases, it is of &lsquo;.3gpp&rsquo;. If only filename is specified, it will be saved in the root directory of external storage.</p>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Audio Capture</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><p>In Windows &amp; Android, Audio capture will not be started, if the file name is set to null. File will not be saved for invaild file name. It will return error in the callback returning parameters with the valid reason.</p>
  </div></div></div></div><a name='r2'></a><div class=' remarks' id='r2'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark2"><strong>Restarting of Audio Capture</strong></div><div id="cRemark2" class="accordion-body">  <div class="accordion-inner"><p>Audio recording will not be restarted, if the audio recording is already in process. In order to restart the audio capture, stop or cancel method need to be invoked before invoking start method.</p>
  </div></div></div></div><a name='r3'></a><div class=' remarks' id='r3'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark3"><strong>Page Refresh</strong></div><div id="cRemark3" class="accordion-body">  <div class="accordion-inner"><p>If the page is to be refreshed, the audio recording should be canceled. In Android and iOS, the state will be persisted.</p>
  </div></div></div></div><a name='r4'></a><div class=' remarks' id='r4'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark4"><strong>Page Navigation</strong></div><div id="cRemark4" class="accordion-body">  <div class="accordion-inner"><p>Upon page navigation, the audio recording should be canceled.In iOS, the state will be persisted.</p>
  </div></div></div></div><a name='r5'></a><div class=' remarks' id='r5'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark5"><strong>Duration And File Name Settings</strong></div><div id="cRemark5" class="accordion-body">  <div class="accordion-inner"><p>The default values will be applied for duration if no values are provided by the user. If values are provided then it will apply the user provided values. Later if values are not provided then it will apply the last provided values for the same. The settings for duration and file name will not be applied if the audio capture is already started and in progress. In android, there might be slight omit of recording data initially.</p>
  </div></div></div></div><a name='r6'></a><div class=' remarks' id='r6'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark6"><strong>Get Property Or Get Properties</strong></div><div id="cRemark6" class="accordion-body">  <div class="accordion-inner"><p>In Windows, &lsquo;getProperty&rsquo; or &lsquo;getProperties&rsquo; for fileName will return the complete path along with the extension name. For example: If file name was set to &lsquo;\Application\AudioCapture&rsquo;, then &lsquo;getProperty&rsquo; or &lsquo;getProperties&rsquo; will return &lsquo;\Application\AudioCapture.wav&rsquo;. If file name was set to &lsquo;AudioCapture&rsquo;, then &lsquo;getProperty&rsquo; or &lsquo;getProperties&rsquo; will return &lsquo;\AudioCapture.wav&rsquo;. In Android, the fileName will return whatever is set with or without extension.</p>
  </div></div></div></div><a name='r7'></a><div class=' remarks' id='r7'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark7"><strong>General</strong></div><div id="cRemark7" class="accordion-body">  <div class="accordion-inner"><p>On Quitting of the Application, Android will save the data in the file and gracefully exit. In Android, during suspend/resume or screen timeout the audio will keep on recording.</p>
  </div></div></div></div></div>